# uav-plant-calibration

./: .gitignore  CMakeLists.txt  README.md  calib  debug_tiff.js  fisheye  package-lock.json  package.json  test_opencv.js
example/calib/input/: DJI_0081.TIF  DJI_0082.TIF  DJI_0083.TIF  DJI_0084.TIF  DJI_0085.TIF
example/fisheye/checkboard/: calibration.txt
example/fisheye/samples/: calibration.txt
src/: calib.cc  cli.cc  test_tif.cc  tiff.js  wingui.cc
tests/: test_tif_support.cc
utils/: find-opencv.js
